--- a/home.html
+++ b/home.html
@@ -61,12 +61,14 @@
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
       <a class="navbar-brand" href="#">Me</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ol class="nav navbar-nav navbar-right">
+        <li><a href="#welcome" class="smoothscroll">Home</a></li>
         <li><a href="#who" class="smoothscroll">WHO</a></li>
         <li><a href="#what" class="smoothscroll">WHAT</a></li>
         <li><a href="#where" class="smoothscroll">WHERE</a></li>
@@ -74,6 +76,9 @@
     </div>
   </div>
 </nav>
-
+<div class= "container-fluid bg-3 text-center">
+  <h3 class="margin">Welcome</h3>
+    <p>content</p>
+</div>
 
 </body>
