--- a/home.html
+++ b/home.html
@@ -10,47 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-  <style>
-  body {
-      font: 20px Montserrat, sans-serif;
-      line-height: 1.8;
-      color: #f5f6f7;
-  }
-  p {font-size: 16px;}
-  .margin {margin-bottom: 45px;}
-  .bg-1 { 
-      background-color: #1abc9c; /* Green */
-      color: #ffffff;
-  }
-  .bg-2 { 
-      background-color: #474e5d; /* Dark Blue */
-      color: #ffffff;
-  }
-  .bg-3 { 
-      background-color: #ffffff; /* White */
-      color: #555555;
-  }
-  .bg-4 { 
-      background-color: #2f2f2f; /* Black Gray */
-      color: #fff;
-  }
-  .container-fluid {
-      padding-top: 70px;
-      padding-bottom: 70px;
-  }
-  .navbar {
-      padding-top: 15px;
-      padding-bottom: 15px;
-      border: 0;
-      border-radius: 0;
-      margin-bottom: 0;
-      font-size: 12px;
-      letter-spacing: 5px;
-  }
-  .navbar-nav  li a:hover {
-      color: #1abc9c !important;
-  }
-  </style>
+  <link rel="stylesheet" href="home.css"
 </head>
 <body>
 
@@ -69,16 +29,18 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ol class="nav navbar-nav navbar-right">
         <li><a href="#welcome" class="smoothscroll">Home</a></li>
-        <li><a href="#who" class="smoothscroll">WHO</a></li>
-        <li><a href="#what" class="smoothscroll">WHAT</a></li>
-        <li><a href="#where" class="smoothscroll">WHERE</a></li>
+        <li><a href="#who" class="smoothscroll">Students</a></li>
+        <li><a href="#what" class="smoothscroll">Parents</a></li>
+        <li><a href="#where" class="smoothscroll">Teachers</a></li>
       </ol>
     </div>
   </div>
 </nav>
 <div class= "container-fluid bg-3 text-center">
-  <h3 class="margin">Welcome</h3>
-    <p>content</p>
+  <h1 class="margin">Tristan & Luis' <font color="red">Declassified</font> SEP Survival Guide</h1>
+  <h3 class="margin">Welcome!</h3>
+    <p>Welcome to our SEP guide, here you will find what its like to be in the SEP program and how to be a successful student in the SEP class!
+    In the navigation bar you will find different tabs, click on the one you think you belong too please.</p>
 </div>
 
 </body>
