--- a/home.html
+++ b/home.html
@@ -29,14 +29,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">Me</a>
+  <img src="images/sepLogo.png" class="img-responsive" alt="" width="304" height="236"> 
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ol class="nav navbar-nav navbar-right">
         <li><a href="#welcome" class="smoothscroll">Home</a></li>
-        <li><a href="#who" class="smoothscroll">Students</a></li>
-        <li><a href="#what" class="smoothscroll">Parents</a></li>
-        <li><a href="#where" class="smoothscroll">Teachers</a></li>
+        <li><a href="student.html" class="smoothscroll">Students</a></li>
+        <li><a href="parent.html" class="smoothscroll">Parents</a></li>
+        <li><a href="teacher.html" class="smoothscroll">Teachers</a></li>
       </ol>
     </div>
   </div>
@@ -48,29 +48,5 @@
     In the navigation bar you will find different tabs, click on the one you think you belong too please.</p>
 </div>
 
-  <!-- Navbar -->
-  <nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">
-          <div class= container>
-          <img src="images/sepLogo.png" class="img-responsive" alt="" width="304" height="236"> 
-        </a>
-        </div>
-      </div>
-      <div class="collapse navbar-collapse" id="myNavbar">
-        <ol class="nav navbar-nav navbar-right">
-          <li><a href="#who" class="smoothscroll">WHO</a></li>
-          <li><a href="#what" class="smoothscroll">WHAT</a></li>
-          <li><a href="#where" class="smoothscroll">WHERE</a></li>
-        </ol>
-      </div>
-    </div>
-  </nav>
 
 </body>
