add teacher details

--- a/home.html
+++ b/home.html
@@ -37,11 +37,12 @@
   </div>
 </nav>
 <div class= "container-fluid bg-3 text-center">
-  <br
+  <br>
   <h1 class="margin">Tristan & Luis' <font color="red">Declassified</font> SEP Survival Guide</h1>
   <h3 class="margin">Welcome!</h3>
     <p>Welcome to our SEP guide, here you will find what its like to be in the SEP program and how to be a successful student in the SEP class!
     In the navigation bar you will find different tabs, click on the one you think you belong too please.</p>
+    <h1>This is the introduction page to our SEP Guide</h1>
 </div>
 
 
