--- a/teacher.html
+++ b/teacher.html
@@ -47,7 +47,8 @@
     <p>Welcome to the teachers section of our guide! In this section Teachers who are interested in becoming
     a succesful teacher and learn how to become a good one!</p>
     <h1>Teacher life in the classroom</h1>
-    
+    <h1>Tutorial</h1>
+    <h1>Code alongs</h1>
 </div>
 
 
