--- a/student.html
+++ b/student.html
@@ -42,8 +42,12 @@
 <p>Here any student of any grade can learn what is life for a SEP student and
  how to be successful in this class with many of the things we do in this class that help us out a lot.</p>
  <h1>Class life</h1>
- <h3>Studyi</h3>
- <h1>Showcase</h1>
+ <h3>Studying</h3>
+ <h3></h3>
+ 
  <h1>Projects & Presentation</h1>
+ </div>
+ <div class="container-fluid bg-2 text-center">
+ <h1>Showcases</h1>
  </div>
 </body>
