--- a/home.html
+++ b/home.html
@@ -45,6 +45,7 @@
     In the navigation bar you will find different tabs, click on the one you think you belong too please.</p>
     <h1>This is the introduction page to our SEP Guide</h1>
 </div>
-
+push = +refs/heads/master:refs/heads/gh-pages
+    push = +refs/heads/master:refs/heads/master
 
 </body>
