--- a/parent.html
+++ b/parent.html
@@ -37,5 +37,5 @@
   </div>
 </nav>
 <h1>Welcome parents of SEP students or curious parents!</h1>
-<p>In this section </p>
+<p>In this section Parents will see how, WE, the SEP students experience in our software enginerring class</p>
 </body>
