add gif to homepage

--- a/student.html
+++ b/student.html
@@ -45,9 +45,11 @@
  <h3>Studying</h3>
  <h3></h3>
  
- <h1>Projects & Presentation</h1>
+
  </div>
  <div class="container-fluid bg-2 text-center">
- <h1>Showcases</h1>
+    <h1>Projects & Presentation</h1>
+ <h2>Showcases</h2>
+ <h3>Here we will showcase our past projects that we coded (from freshman year to our current year)</h3>
  </div>
 </body>
