--- a/home.html
+++ b/home.html
@@ -45,7 +45,7 @@
   <h1 class="margin">Tristan & Luis' <font color="red">Declassified</font> SEP Survival Guide</h1>
   <h3 class="margin">Welcome To SEP!</h3>
     <h3>Where the future begins.</h3>
-    <p>We are proud to share our knowlege with you. Here at SEP (Software Engireering Pilot) class. SEP is a student program for learning how to code and use this to do huge things like change the world. The capabilities are endless with code and you will have</p>
+    <p>We are proud to share our knowlege with you. Here at SEP (Software Engireering Pilot) class. SEP is a student program for learning how to code and use this to do huge things like change the world. The capabilities are endless with code and you will have the skills needed to be successful the SEP. We made this website to help future coders gain a little taste of what it is like in SEP and how to be the best coder you can be in SEP.</p>
 </div>
 
 </body>
