--- a/student.html
+++ b/student.html
@@ -51,5 +51,9 @@
     <h1>Projects & Presentation</h1>
  <h2>Showcases</h2>
  <h3>Here we will showcase our past projects that we coded (from freshman year to our current year)</h3>
+ <ol>
+   <li><a href="">Tristan's Portfolio</a></li>
+   <li><a href="https://sites.google.com/a/hstat.org/luism6058sep11/">Luis' Portfolio</a></li>
+ </ol>
  </div>
 </body>
