--- a/student.html
+++ b/student.html
@@ -42,7 +42,7 @@
 <p>Here any student of any grade can learn what is life for a SEP student and
  how to be successful in this class with many of the things we do in this class that help us out a lot.</p>
  <h1>Class life</h1>
- <h3>Studying</h3>
+ <p>Our teacher Mr. Mueller has taught us many tricks and tips when we code. In this class it would be a big help if you knew some keyboard shortcuts to help you use your computer at maximum effeciency. Here is a link to some keyboard schortcuts for mac users. </p>
  <h3></h3>
  
 
