add my portfolio link

--- a/student.html
+++ b/student.html
@@ -52,7 +52,7 @@
  <h2>Showcases</h2>
  <h3>Here we will showcase our past projects that we coded (from freshman year to our current year)</h3>
  <ol>
-   <li><a href="">Tristan's Portfolio</a></li>
+   <li><a href="https://sites.google.com/a/hstat.org/tristanm7522sep11/">Tristan's Portfolio</a></li>
    <li><a href="https://sites.google.com/a/hstat.org/luism6058sep11/">Luis' Portfolio</a></li>
  </ol>
  </div>
