--- a/student.html
+++ b/student.html
@@ -28,7 +28,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ol class="nav navbar-nav navbar-right">
-        <li><a href="#welcome" class="smoothscroll">Home</a></li>
+        <li><a href="home.html" class="smoothscroll">Home</a></li>
         <li><a href="student.html" class="smoothscroll">Students</a></li>
         <li><a href="parent.html" class="smoothscroll">Parents</a></li>
         <li><a href="teacher.html" class="smoothscroll">Teachers</a></li>
@@ -42,7 +42,9 @@
 <p>Here any student of any grade can learn what is life for a SEP student and
  how to be successful in this class with many of the things we do in this class that help us out a lot.</p>
  <h1>Class life</h1>
- <p>Our teacher Mr. Mueller has taught us many tricks and tips when we code. In this class it would be a big help if you knew some keyboard shortcuts to help you use your computer at maximum effeciency. Here is a link to some keyboard schortcuts for mac users. </p>
+ <p>Our teacher Mr. Mueller has taught us many tricks and tips when we code. 
+ In this class it would be a big help if you knew some keyboard shortcuts to help you use your computer at maximum effeciency. 
+ Here is a link to some keyboard schortcuts for mac users. </p>
  <h3></h3>
  
 
