--- a/home.html
+++ b/home.html
@@ -32,9 +32,8 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ol class="nav navbar-nav navbar-right">
-        <li><a href="#welcome" class="smoothscroll">Home</a></li>
+        <li><a href="home.html" class="smoothscroll">Home</a></li>
         <li><a href="student.html" class="smoothscroll">Students</a></li>
-        <li><a href="parent.html" class="smoothscroll">Parents</a></li>
         <li><a href="teacher.html" class="smoothscroll">Teachers</a></li>
       </ol>
     </div>
