--- a/student.html
+++ b/student.html
@@ -11,6 +11,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="home.css">
+   <link rel="stylesheet" href="nav.css">
 </head>
 <body>
 
@@ -30,7 +31,6 @@
       <ol class="nav navbar-nav navbar-right">
         <li><a href="home.html" class="smoothscroll">Home</a></li>
         <li><a href="student.html" class="smoothscroll">Students</a></li>
-        <li><a href="parent.html" class="smoothscroll">Parents</a></li>
         <li><a href="teacher.html" class="smoothscroll">Teachers</a></li>
       </ol>
     </div>
