--- a/teacher.html
+++ b/teacher.html
@@ -11,6 +11,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="home.css">
+   <link rel="stylesheet" href="nav.css">
 </head>
   
 
