--- a/student.html
+++ b/student.html
@@ -39,11 +39,12 @@
 <div class="container-fluid bg-1 text-center">
   
 <h1 class="margin">Welcome to the student's section!</h1>
-<p>Here any student of any grade can learn what is life for a SEP student and
- how to be successful in this class with many of the things we do in this class that help us out a lot.</p>
  <h1>Class life</h1>
- <p>Our teacher Mr. Mueller has taught us many tricks and tips when we code. In this class it would be a big help if you knew some keyboard shortcuts to help you use your computer at maximum effeciency. Here is a link to some keyboard schortcuts for mac users. </p>
- <h3></h3>
+<p>Here you can discover tips and learn exactly what SEP class is like.</p>
+<h1>A good start</h1>
+ <p>Our teacher Mr. Mueller has taught us many tricks and tips when we code. In this class it would be a big help if you knew some keyboard shortcuts to help you code for maximum effeciency. Here is a link to some <a href= "http://blog.codinghorror.com/very-basic-textbox-keyboard-shortcuts/">keyboard shortcuts</a> for mac users. These will help you complete tasks as fast as possible. Another good way to start clas is to have your computer tabs up and running so you wont fall behind. You should utilize the bookmarks bar. Bookmark the following: Google, your class website, c9.io (your terminal) and Github.com.</p>
+ <h1>Class Lessons</h1>
+ <p>In this class it is easy to fall behind so you should always be engaged in the class. Once you enter the room your instructions will be up on the board. Listen to your teacher carefully and learn with the class. It is always good to venture coding on your own but you must keep on track with the teeachers lessons</p>
  
 
  </div>
