--- a/teacher.html
+++ b/teacher.html
@@ -41,13 +41,19 @@
     </div>
   </div>
 </nav>
-<div class= "container-fluid bg-3 text-center">
+<div class= "container-fluid bg-2 text-center">
   <h1 class="margin">Tristan & Luis' <font color="red">Declassified</font> SEP Survival Guide (Teacher Edition!)</h1>
   <h3 class="margin">Welcome!</h3>
     <p>Welcome to the teachers section of our guide! In this section Teachers who are interested in becoming
     a succesful teacher and learn how to become a good one!</p>
     <h1>Teacher life in the classroom</h1>
     <h1>Tutorial</h1>
+    <h4>This part will give curious teachers resources and tips on how to become
+    a successful teacher in the SEP program</h4>
+<h3><a href="http://www.w3schools.com/">W3schools</a></h3>
+<h3><a href="http://www.tutorialrepublic.com/">tutorial republic</a></h3>
+<h3><a href="https://www.codecademy.com/">Code Academy</a></h3>
+<h3>Do live coding and ask for student's advice for the next steps</h3>
     <h1>Code alongs</h1>
 </div>
 
