--- a/teacher.html
+++ b/teacher.html
@@ -42,8 +42,7 @@
   </div>
 </nav>
 <div class= "container-fluid bg-2 text-center">
-  <h1 class="margin">Tristan & Luis' <font color="red">Declassified</font> SEP Survival Guide (Teacher Edition!)</h1>
-  <h3 class="margin">Welcome!</h3>
+  <h1 class="margin">Tristan (without his hairline & Luis' <font color="red">Declassified</font> SEP Survival Guide (Teacher Edition!)</h1>
     <p>Welcome to the teachers section of our guide! In this section Teachers who are interested in becoming
     a succesful teacher and learn how to become a good one!</p>
     <h1>Teacher life in the classroom</h1>
