--- a/home.html
+++ b/home.html
@@ -49,5 +49,6 @@
     SEP is a student program for learning how to code and use this to do huge things like change the world. The capabilities are endless with code and you will have the skills needed to be successful the SEP. We made this website to help future coders gain a little taste of what it is like in SEP and how to be the best coder you can be in SEP!</p>
     <p>If you are new to the SEP Program, this is the site for you! SEP peans Software engineering Pilot, since it is still a new program to our school and we are the 'pioneer' class or the first class. The SEP program is about teaching students how to code, ranging from basic steps on <a href="https://scratch.mit.edu/">Scratch</a> to complex coding using Jquery to create more responsive websites and implementing Bootstrap for more modern use on web design. We've also</p>
 </div>
+<img src="school.JPG" class="img-responsive" alt=" insert class picture" width="904" height="236">
 
 </body>
