--- a/student.html
+++ b/student.html
@@ -36,7 +36,7 @@
     </div>
   </div>
 </nav>
-<div class="container-fluid bg-1">
+<div class="container-fluid bg-1 text-center">
   
 <h1 class="margin">Welcome to the student's section!</h1>
  <h1>Class life</h1>
