--- a/student.html
+++ b/student.html
@@ -40,7 +40,11 @@
   
 <h1 class="margin">Welcome to the student's section!</h1>
  <h1>Class life</h1>
+
 <p>Here you can discover tips and learn exactly what SEP class is like.</p>
+ <div class= "col-md-6">
+     <img src="images/comp_lab.JPG" class="img-responsive">
+ </div>
 <h1>A good start</h1>
  <p>Our teacher Mr. Mueller has taught us many tricks and tips when we code. In this class it would be a big help if you knew some keyboard shortcuts to help you code for maximum effeciency. Here is a link to some <a href= "http://blog.codinghorror.com/very-basic-textbox-keyboard-shortcuts/">keyboard shortcuts</a> for mac users. These will help you complete tasks as fast as possible. Another good way to start clas is to have your computer tabs up and running so you wont fall behind. You should utilize the bookmarks bar. Bookmark the following: Google, your class website, c9.io (your terminal) and Github.com.</p>
  <h1>Class Lessons</h1>
