--- a/code.1.html
+++ b/code.1.html
@@ -25,6 +25,7 @@
             <li class="active"><a href="#index">home.html</a></li>
             <li><a href="#custom">home.css</a></li>
             <li><a href="#student">student.html</a></li>
+            <li><a href="#teacher">teacher.html</a></li>
         </ul>
 
 <!-- 
@@ -43,6 +44,10 @@ https://gist-it.appspot.com/github/bmuellerhstat/shabr/raw/master/index.html?foo
             </div>
 <div id="student" class="tab-pane fade in active">
                 <script src="https://gist-it.appspot.com/github/luism6058/sep-guide/raw/master/student.html?footer=0"></script>
+            </div>
+                        </div>
+<div id="student" class="tab-pane fade in active">
+                <script src="https://gist-it.appspot.com/github/luism6058/sep-guide/raw/master/teacher.html?footer=0"></script>
             </div>
         </div>
     </div>
