--- a/student.html
+++ b/student.html
@@ -43,12 +43,15 @@
 
 <p>Here you can discover tips and learn exactly what SEP class is like.</p>
  <div class= "col-md-6">
-     <img src="images/comp_lab.JPG" class="img-responsive">
+     <img src="images/comp_lab.JPG" width="76%">
  </div>
+ <div class= "col-md-6">
 <h1>A good start</h1>
- <p>Our teacher Mr. Mueller has taught us many tricks and tips when we code. In this class it would be a big help if you knew some keyboard shortcuts to help you code for maximum effeciency. Here is a link to some <a href= "http://blog.codinghorror.com/very-basic-textbox-keyboard-shortcuts/">keyboard shortcuts</a> for mac users. These will help you complete tasks as fast as possible. Another good way to start clas is to have your computer tabs up and running so you wont fall behind. You should utilize the bookmarks bar. Bookmark the following: Google, your class website, c9.io (your terminal) and Github.com.</p>
+ <p>Our teacher Mr. Mueller has taught us many tricks and tips when we code. In this class it would be a big help if you knew some keyboard shortcuts to help you code for maximum effeciency. Here is a link to some <a href= "https://docs.google.com/document/d/10drl87oaEtmT6E2NQidNY3pKWYNXieEh7Kj-oZ7pDcA/preview">keyboard shortcuts</a> for mac users. These will help you complete tasks as fast as possible. Another good way to start clas is to have your computer tabs up and running so you wont fall behind. You should utilize the bookmarks bar. Bookmark the following: Google, your class website, c9.io (your terminal) and Github.com.</p>
  <h1>Class Lessons</h1>
  <p>In this class it is easy to fall behind so you should always be engaged in the class. Once you enter the room your instructions will be up on the board. Listen to your teacher carefully and learn with the class. It is always good to venture coding on your own but you must keep on track with the teachers lessons. Through the class we will have class discussions and time to practice coding what we learned. When learning new languages in code our teacher would make us practice on a website called <a href="www.codeacadamy.com">CodeAcadamy</a>. This is a great webstite to  visit by yourself and learn as well. If you learn some languages that will give you a huge head start on coding. Some you should learn are: Java, Jquery, Python, Markdown Syntax, html, css. robotics.</p>
+ </div> <br>
+ <div id= "topics">
  <h1>Some Fun Topics We Learned</h1>
  <li>Html</li>
  <li>CSS</li>
@@ -58,9 +61,16 @@
  <li>Robotics</li>
  <li>Processing</li>
  <li>Web Design</li>
-
- 
-
+</div>
+  <div class= "col-md-6">
+     <img src="images/scratch_project.png" width="76%">
+ </div>
+ <div class= "col-md-6">
+     <img src="images/robotics.JPG" width="76%">
+ </div>
+ <div class= "col-md-6" id= "arduino">
+     <img src="images/arduino.JPG" width="76%">
+ </div>
  </div>
  <div class="container-fluid bg-2 text-center">
     <h1>Projects & Presentation</h1>
